src/test/ui/borrowck/issue-71546.stderr
error: higher-ranked lifetime error
  --> $DIR/issue-71546.rs:9:27
   |
LL |       let csv_str: String = value
   |  ___________________________^
LL | |
LL | |
LL | |
LL | |         .into_iter()
LL | |         .map(|elem| elem.to_string())
   | |_____________________________________^
   |
   = note: could not prove for<'r> [closure@$DIR/issue-71546.rs:14:14: 14:37] well-formed

error: higher-ranked lifetime error
  --> $DIR/issue-71546.rs:9:27
   |
LL |       let csv_str: String = value
   |  ___________________________^
LL | |
LL | |
LL | |
LL | |         .into_iter()
LL | |         .map(|elem| elem.to_string())
   | |_____________________________________^
   |
   = note: could not prove for<'r, 's> Map<<&'r V as IntoIterator>::IntoIter, [closure@$DIR/issue-71546.rs:14:14: 14:37]> well-formed

error: higher-ranked lifetime error
  --> $DIR/issue-71546.rs:9:27
   |
LL |       let csv_str: String = value
   |  ___________________________^
LL | |
LL | |
LL | |
...  |
LL | |
LL | |         .collect::<String>();
   | |____________________________^
   |
   = note: could not prove for<'r, 's> Map<<&'r V as IntoIterator>::IntoIter, [closure@$DIR/issue-71546.rs:14:14: 14:37]> well-formed

error: higher-ranked lifetime error
  --> $DIR/issue-71546.rs:14:14
   |
LL |         .map(|elem| elem.to_string())
   |              ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: could not prove for<'a> <&'a V as IntoIterator>::Item: 'static

error: higher-ranked lifetime error
  --> $DIR/issue-71546.rs:16:10
   |
LL |         .collect::<String>();
   |          ^^^^^^^

error: aborting due to 5 previous errors

